--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lage": "lage"
   },
   "devDependencies": {
+    "beachball": "^2.1.0",
     "lage": "0.29.0",
-    "beachball": "^2.1.0"
+    "prettier": "^2.2.1"
   }
 }
