--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "test": "lage test",
     "lint": "lage lint",
     "lage": "lage",
-    "change": "beachball change",
-    "checkchange": "beachball check",
-    "release": "beachball publish"
+    "change": "beachball change -b origin/main",
+    "checkchange": "beachball check -b origin/main",
+    "release": "beachball publish -b origin/main"
   },
   "devDependencies": {
     "beachball": "^2.1.0",
