--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@graphitation/apollo-mock-client",
-  "version": "0.1.1",
+  "name": "@graphitation/apollo-react-relay-duct-tape",
+  "version": "0.1.0",
   "main": "./src/index.ts",
   "scripts": {
     "build": "monorepo-scripts build",
@@ -11,19 +11,15 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.3.15",
-    "@graphitation/graphql-js-tag": "^0.1.1",
-    "@graphitation/graphql-js-operation-payload-generator": "^0.1.1",
-    "@types/invariant": "^2.2.34",
+    "@graphitation/apollo-mock-client": "^0.1.0",
+    "@graphitation/graphql-js-tag": "^0.1.0",
+    "@graphitation/graphql-js-operation-payload-generator": "^0.1.0",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
-    "@types/react-test-renderer": "^17.0.1",
-    "graphql": "^15.5.0",
     "monorepo-scripts": "*",
-    "react": "^17.0.2",
-    "react-test-renderer": "^17.0.2"
+    "react": "^17.0.2"
   },
   "peerDependencies": {
-    "@apollo/client": "^3.3.0",
     "graphql": "^15.5.0",
     "react": "^17.0.2"
   },
@@ -32,7 +28,6 @@
   },
   "publishConfig": {
     "main": "./lib/index.js",
-    "types": "./lib/index.d.ts",
-    "access": "public"
+    "types": "./lib/index.d.ts"
   }
 }
