--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,6 @@ jobs:
       - run: |
           git config user.email "gql-svc@microsoft.com"
           git config user.name "Graphitation Service Account"
-      - run: yarn release -y -n $NPM_AUTHTOKEN
+      - run: yarn release -y -n $NPM_AUTHTOKEN --access public
         env:
           NPM_AUTHTOKEN: ${{ secrets.npm_authtoken }}
