--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -8,7 +8,7 @@
     "test": "monorepo-scripts test",
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts",
-    "relay": "relay-compiler --language typescript --schema ./src/__tests__/schema.graphql --src ./src"
+    "relay": "relay-compiler --language graphitation --schema ./src/__tests__/schema.graphql --src ./src"
   },
   "devDependencies": {
     "@apollo/client": "^3.3.15",
@@ -20,7 +20,7 @@
     "monorepo-scripts": "*",
     "react": "^17.0.2",
     "relay-compiler": "^11.0.2",
-    "relay-compiler-language-typescript": "^14.0.0"
+    "relay-compiler-language-graphitation": "^0.1.0"
   },
   "peerDependencies": {
     "graphql": "^15.5.0",
