--- a/packages/apollo-mock-client/package.json
+++ b/packages/apollo-mock-client/package.json
@@ -1,5 +1,7 @@
 {
   "name": "@graphitation/apollo-mock-client",
+  "description": "An Apollo Client that allows mocking of payloads in response to operations, rather than having to provide them all upfront.",
+  "license": "MIT",
   "version": "0.1.1",
   "main": "./src/index.ts",
   "scripts": {
