--- a/packages/graphql-js-tag/package.json
+++ b/packages/graphql-js-tag/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@graphitation/graphql-js-tag",
   "description": "A simple graphql-js AST based `graphql` tagged template function.",
+  "license": "MIT",
   "version": "0.1.1",
   "main": "./src/index.ts",
   "scripts": {
