--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -1,5 +1,7 @@
 {
   "name": "relay-compiler-language-graphitation",
+  "description": "A relay-compiler plugin that wraps the TypeScript plugin and augments it slightly for @graphitation/apollo-react-relay-duct-tape's needs.",
+  "license": "MIT",
   "version": "0.1.0",
   "main": "./lib/index.js",
   "scripts": {
