--- a/packages/apollo-mock-client/package.json
+++ b/packages/apollo-mock-client/package.json
@@ -26,8 +26,7 @@
   },
   "peerDependencies": {
     "@apollo/client": "^3.3.0",
-    "graphql": "^15.5.0",
-    "react": "^17.0.2"
+    "graphql": "^15.5.0"
   },
   "dependencies": {
     "invariant": "^2.2.4"
