[ci] Run build, test, and lint

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,7 +20,5 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn
-      - run: yarn checkchange
-      - run: yarn build
-      - run: yarn test
+      - run: yarn install
+      - run: yarn ci
