--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: yarn
-      - run: yarn build
-      - run: yarn test
+      - run: yarn install
+      - run: yarn ci
       - run: |
           git config user.email "gql-svc@microsoft.com"
           git config user.name "Graphitation Service Account"
