--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
       - run: |
           git config user.email "gql-svc@microsoft.com"
           git config user.name "Graphitation Service Account"
+      - run: yarn types
       - run: yarn release -y -n $NPM_AUTHTOKEN --access public
         env:
           NPM_AUTHTOKEN: ${{ secrets.npm_authtoken }}
