--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "release": "yarn beachball publish"
   },
   "devDependencies": {
-    "beachball": "^2.1.0",
-    "lage": "0.29.0",
+    "beachball": "2.2.0",
+    "lage": "0.29.1",
     "prettier": "^2.2.1"
   }
 }
