--- a/package-template/package.json
+++ b/package-template/package.json
@@ -15,7 +15,7 @@
     "monorepo-scripts": "*"
   },
   "publishConfig": {
-    "main": "./lib/index.js",
+    "main": "./lib/index",
     "types": "./lib/index.d.ts",
     "access": "public"
   }
