--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -3,7 +3,7 @@
   "description": "A relay-compiler plugin that wraps the TypeScript plugin and augments it slightly for @graphitation/apollo-react-relay-duct-tape's needs.",
   "license": "MIT",
   "version": "0.5.0",
-  "main": "./lib/index.js",
+  "main": "./lib/index",
   "scripts": {
     "build": "tsc",
     "lint": "monorepo-scripts lint",
@@ -20,7 +20,7 @@
     "monorepo-scripts": "*"
   },
   "publishConfig": {
-    "main": "./lib/index.js",
+    "main": "./lib/index",
     "access": "public"
   }
 }
