--- a/packages/supermassive/tsconfig.json
+++ b/packages/supermassive/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": ".tsbuildinfo",
-    "rootDir": "src",
+    "rootDir": ".",
     "outDir": "lib"
   },
   "include": ["src", "benchmarks"],
