--- a/packages/supermassive/tsconfig.json
+++ b/packages/supermassive/tsconfig.json
@@ -6,6 +6,6 @@
     "rootDir": ".",
     "outDir": "lib"
   },
-  "include": ["src", "benchmarks"],
+  "include": ["src/**/*.ts", "benchmarks/**/*.ts"],
   "references": []
 }
