--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -18,7 +18,7 @@
     "@types/jest": "^26.0.22",
     "@types/node-json-db": "^0.9.3",
     "benchmark": "^2.1.4",
-    "graphql": "16.0.0-alpha.5",
+    "graphql": "^15.5.0",
     "graphql-jit": "^0.5.1",
     "monorepo-scripts": "*",
     "node-json-db": "^1.3.0",
