--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
+    "test": "monorepo-scripts test",
     "just": "monorepo-scripts"
   },
   "dependencies": {
@@ -15,8 +16,10 @@
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/dedent": "^0.7.0",
     "@types/jest": "^26.0.22",
     "@types/relay-compiler": "^8.0.0",
+    "dedent": "^0.7.0",
     "monorepo-scripts": "*"
   },
   "publishConfig": {
