--- a/packages/live-graphql-js/package.json
+++ b/packages/live-graphql-js/package.json
@@ -10,6 +10,9 @@
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts"
   },
+  "dependencies": {
+    "graphql": "^16.0.0-rc.2.experimental-stream-defer.3"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "monorepo-scripts": "*"
