--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "webpack serve --open",
+    "start": "concurrently 'yarn relay --watch' 'yarn serve'",
+    "serve": "webpack serve --open",
     "build": "webpack",
     "dump-schema": "ts-node ./scripts/dump-schema.ts > ./data/schema.graphql",
     "relay": "yarn dump-schema && relay-compiler --schema ./data/schema.graphql --src ./src --language graphitation"
@@ -37,6 +38,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "concurrently": "^6.2.1",
     "relay-compiler": "^10",
     "relay-compiler-language-graphitation": "^0.5.1",
     "ts-loader": "^9.2.6",
