--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@welldone-software/why-did-you-render": "^6.2.1",
     "concurrently": "^6.2.1",
     "relay-compiler": "^10",
     "relay-compiler-language-graphitation": "^0.5.1",
