--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -6,16 +6,17 @@
     "@apollo/client": "^3.4.13",
     "@graphitation/apollo-react-relay-duct-tape": "^0.4.2",
     "@graphitation/graphql-js-tag": "^0.5.3",
+    "@graphql-tools/schema": "^8.2.0",
     "graphql": "^15.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "scripts": {
-    "start": "concurrently 'yarn relay --watch' 'yarn serve'",
+    "start": "yarn generate-resolver-typings && concurrently 'yarn relay --watch' 'yarn serve'",
     "serve": "webpack serve --open",
     "build": "webpack",
-    "dump-schema": "ts-node ./scripts/dump-schema.ts > ./data/schema.graphql",
-    "relay": "yarn dump-schema && relay-compiler --schema ./data/schema.graphql --src ./src --language graphitation"
+    "relay": "relay-compiler --schema ./data/schema.graphql --src ./src --language graphitation",
+    "generate-resolver-typings": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": [
@@ -35,6 +36,9 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.2.0",
+    "@graphql-codegen/typescript": "2.2.2",
+    "@graphql-codegen/typescript-resolvers": "^2.2.1",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -43,7 +47,6 @@
     "relay-compiler": "^10",
     "relay-compiler-language-graphitation": "^0.5.1",
     "ts-loader": "^9.2.6",
-    "ts-node": "^10.2.1",
     "typescript": "^4.1.2",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
