--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -11,6 +11,7 @@
     "just": "monorepo-scripts"
   },
   "dependencies": {
+    "@graphitation/graphql-js-tag": "^0.5.3",
     "graphql": "^14.6.0",
     "relay-compiler-language-typescript": "^14.0.0",
     "typescript": "^4.2.3"
