--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -42,11 +42,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.1.0",
     "@welldone-software/why-did-you-render": "^6.2.1",
     "concurrently": "^6.2.1",
     "relay-compiler": "^10",
     "relay-compiler-language-graphitation": "^0.5.1",
     "ts-loader": "^9.2.6",
+    "ts-node": "^10.2.1",
     "typescript": "^4.1.2",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
