--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "prettier": "^2.2.1"
   },
   "resolutions": {
-    "@types/webpack": "^5.28.0"
+    "@types/webpack": "^5.28.0",
+    "graphql": "^15.6.0",
+    "typescript": "^4.4.3"
   }
 }
