Move all lib code to apollo-react-relay-duct-tape

--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "start": "yarn generate-resolver-typings && concurrently 'yarn relay --watch' 'yarn serve'",
-    "serve": "webpack serve --open",
+    "serve": "webpack serve",
     "build": "webpack",
     "relay": "SCHEMA_PATH=./data/schema.graphql relay-compiler --schema ./data/schema.graphql --src ./src --language graphitation",
     "generate-resolver-typings": "graphql-codegen --config codegen.yml"
