--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -22,7 +22,7 @@
     "monorepo-scripts": "*",
     "react": "^17.0.2",
     "relay-compiler": "^11.0.2",
-    "relay-compiler-language-graphitation": "^0.5.1",
+    "relay-compiler-language-graphitation": "^0.6.0-store-observation.1",
     "ts-expect": "^1.3.0"
   },
   "peerDependencies": {
