Revert merge of apollo-fragment-store-watching branch
This reverts commit 5d140f34097b33cc24816892b1bf8a5b544ee868.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "workspaces": {
     "packages": [
-      "examples/*",
       "packages/*",
       "scripts"
     ]
@@ -19,18 +18,11 @@
     "beachball": "beachball -b origin/main",
     "change": "yarn beachball change",
     "checkchange": "yarn beachball check",
-    "release": "yarn beachball publish",
-    "postinstall": "patch-package"
+    "release": "yarn beachball publish"
   },
   "devDependencies": {
     "beachball": "2.2.0",
     "lage": "0.29.1",
-    "patch-package": "^6.4.7",
     "prettier": "^2.2.1"
-  },
-  "resolutions": {
-    "@types/webpack": "^5.28.0",
-    "graphql": "^15.6.0",
-    "typescript": "^4.4.3"
   }
 }
