--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -2,7 +2,7 @@
   "name": "@graphitation/apollo-react-relay-duct-tape",
   "description": "A compatibility wrapper that provides the react-relay API on top of Apollo Client.",
   "license": "MIT",
-  "version": "0.5.0-store-observation.1",
+  "version": "0.4.3",
   "main": "./src/index.ts",
   "scripts": {
     "build": "monorepo-scripts build",
@@ -13,7 +13,7 @@
     "generate-interfaces": "relay-compiler --language graphitation --schema ./src/__tests__/schema.graphql --src ./src"
   },
   "devDependencies": {
-    "@apollo/client": "^3.4.13",
+    "@apollo/client": "^3.3.15",
     "@graphitation/apollo-mock-client": "^0.6.9",
     "@graphitation/graphql-js-operation-payload-generator": "^0.5.9",
     "@graphitation/graphql-js-tag": "^0.5.4",
@@ -22,11 +22,10 @@
     "monorepo-scripts": "*",
     "react": "^17.0.2",
     "relay-compiler": "^11.0.2",
-    "relay-compiler-language-graphitation": "^0.6.0-store-observation.1",
+    "relay-compiler-language-graphitation": "^0.5.1",
     "ts-expect": "^1.3.0"
   },
   "peerDependencies": {
-    "@apollo/client": "^3.4.13",
     "graphql": "^15.5.0",
     "react": "^17.0.2"
   },
