--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -2,8 +2,8 @@
   "name": "@graphitation/apollo-react-relay-duct-tape",
   "description": "A compatibility wrapper that provides the react-relay API on top of Apollo Client.",
   "license": "MIT",
-  "version": "0.5.0-store-observation.5",
-  "main": "./src/index.ts",
+  "version": "0.5.0",
+  "main": "./lib/index",
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
@@ -22,7 +22,7 @@
     "monorepo-scripts": "*",
     "react": "^17.0.2",
     "relay-compiler": "^11.0.2",
-    "relay-compiler-language-graphitation": "^0.6.0-store-observation.1",
+    "relay-compiler-language-graphitation": "^0.6.0-store-observation.2",
     "ts-expect": "^1.3.0"
   },
   "peerDependencies": {
@@ -33,8 +33,6 @@
   "dependencies": {
     "invariant": "^2.2.4"
   },
-  "publishConfig": {
-    "main": "./lib/index",
-    "types": "./lib/index.d.ts"
-  }
+  "publishConfig": {},
+  "types": "./lib/index.d.ts"
 }
