--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -47,7 +47,7 @@
     "@welldone-software/why-did-you-render": "^6.2.1",
     "concurrently": "^6.2.1",
     "relay-compiler": "^10",
-    "relay-compiler-language-graphitation": "^0.6.0-store-observation.2",
+    "relay-compiler-language-graphitation": "^0.7.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.1.2",
