--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -3,6 +3,11 @@
   "description": "A compatibility wrapper that provides the react-relay API on top of Apollo Client.",
   "license": "MIT",
   "version": "0.7.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/graphitation.git",
+    "directory": "packages/apollo-react-relay-duct-tape"
+  },
   "main": "./src/index.ts",
   "scripts": {
     "build": "monorepo-scripts build",
