--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -10,7 +10,7 @@
     "test": "monorepo-scripts test",
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts",
-    "generate-interfaces": "relay-compiler --language graphitation --schema ./src/__tests__/schema.graphql --src ./src"
+    "relay": "graphitation-compiler --schema ./src/__tests__/schema.graphql --src ./src --exclude src/storeObservation/nodeFromCacheFieldPolicy.test.ts"
   },
   "devDependencies": {
     "@apollo/client": "^3.4.13",
