Remove example app bundle

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ lib
 dist
 .tsbuildinfo
 dist
+examples/apollo-watch-fragments/public/bundle.js
 
 # This is purely pre-cautionary; when linting becomes slow, delete this eslintcache entry
 .eslintcache
