--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -10,7 +10,6 @@
     "just": "monorepo-scripts"
   },
   "dependencies": {
-    "graphql": "^15.0.0",
     "relay-compiler-language-typescript": "^14.0.0",
     "typescript": "^4.2.3"
   },
@@ -18,6 +17,9 @@
     "@types/jest": "^26.0.22",
     "@types/relay-compiler": "^8.0.0",
     "monorepo-scripts": "*"
+  },
+  "peerDependencies": {
+    "graphql": "^15.0.0"
   },
   "publishConfig": {
     "main": "./lib/index",
