--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -19,6 +19,7 @@
     "@graphitation/graphql-js-tag": "^0.5.4",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
+    "graphql": "^15.0.0",
     "monorepo-scripts": "*",
     "react": "^17.0.2",
     "relay-compiler": "^11.0.2",
