--- a/packages/graphql-js-tag/package.json
+++ b/packages/graphql-js-tag/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/invariant": "^2.0.0",
     "@types/jest": "^26.0.22",
+    "graphql": "^15.0.0",
     "monorepo-scripts": "*"
   },
   "publishConfig": {
