--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "@types/relay-compiler": "^8.0.0",
+    "graphql": "^15.0.0",
     "monorepo-scripts": "*"
   },
   "peerDependencies": {
