--- a/packages/ts-transform-graphql-js-tag/package.json
+++ b/packages/ts-transform-graphql-js-tag/package.json
@@ -2,7 +2,8 @@
   "name": "@graphitation/ts-transform-graphql-js-tag",
   "license": "MIT",
   "version": "0.2.0",
-  "main": "./src/index.ts",
+  "main": "./lib/index",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
@@ -22,7 +23,7 @@
     "access": "public"
   },
   "dependencies": {
-    "graphql": "^15.0.0",
+    "graphql": "^15.6.1",
     "typescript": "^4.4.3"
   }
 }
