--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -26,7 +26,9 @@
     "@types/relay-compiler": "^8.0.0",
     "graphql": "^15.0.0",
     "dedent": "^0.7.0",
-    "monorepo-scripts": "*"
+    "monorepo-scripts": "*",
+    "relay-test-utils": "^11.0.2",
+    "relay-test-utils-internal": "^11.0.2"
   },
   "peerDependencies": {
     "graphql": "^15.0.0"
