--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -3,6 +3,9 @@
   "license": "MIT",
   "version": "0.1.0",
   "main": "./src/index.ts",
+  "bin": {
+    "supermassive": "./bin/typeDefsToImplicitResolvers.js"
+  },
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
@@ -29,8 +32,9 @@
     "access": "public"
   },
   "dependencies": {
-    "typescript": "4.4.3",
+    "@graphql-tools/schema": "^7.1.5",
+    "commander": "^8.3.0",
     "graphql": "^15.6.1",
-    "@graphql-tools/schema": "^7.1.5"
+    "typescript": "4.4.3"
   }
 }
