--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.13",
-    "@graphitation/apollo-react-relay-duct-tape": "^0.5.0-store-observation.7",
+    "@graphitation/apollo-react-relay-duct-tape": "^0.5.0",
     "@graphitation/graphql-js-tag": "^0.5.3",
     "@graphql-tools/schema": "^8.2.0",
     "graphql": "^15.6.0",
@@ -47,7 +47,7 @@
     "@welldone-software/why-did-you-render": "^6.2.1",
     "concurrently": "^6.2.1",
     "relay-compiler": "^10",
-    "relay-compiler-language-graphitation": "^0.6.0-store-observation.3",
+    "relay-compiler-language-graphitation": "^0.6.0-store-observation.4",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.1.2",
