--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -2,23 +2,31 @@
   "name": "@graphitation/supermassive",
   "license": "MIT",
   "version": "0.1.3",
-  "main": "./src/index.ts",
+  "main": "./src/index.js",
+  "bin": {
+    "supermassive": "./bin/supermassive.js"
+  },
+  "exports": {
+    ".": {
+      "import": "./lib/index.mjs",
+      "require": "./lib/index.js"
+    }
+  },
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
     "test": "monorepo-scripts test",
     "types": "monorepo-scripts types",
     "just": "monorepo-scripts",
-    "benchmark": "ts-node -T -O '{\"module\":\"commonjs\"}' ./benchmarks/index.ts"
+    "benchmark": "ts-node -T -O '{\"module\":\"commonjs\"}' ./src/benchmarks/index.ts"
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "*",
-    "@graphql-tools/schema": "^7.1.5",
+    "@ts-morph/bootstrap": "^0.11.0",
     "@types/benchmark": "^2.1.0",
     "@types/jest": "^26.0.22",
     "@types/node-json-db": "^0.9.3",
     "benchmark": "^2.1.4",
-    "graphql": "^15.0.0",
     "graphql-jit": "^0.5.1",
     "monorepo-scripts": "*",
     "node-json-db": "^1.3.0",
@@ -28,5 +36,11 @@
     "main": "./lib/index",
     "types": "./lib/index.d.ts",
     "access": "public"
+  },
+  "dependencies": {
+    "@graphql-tools/schema": "^7.1.5",
+    "commander": "^8.3.0",
+    "graphql": "^15.6.1",
+    "typescript": "4.4.3"
   }
 }
