--- a/packages/supermassive/tsconfig.json
+++ b/packages/supermassive/tsconfig.json
@@ -3,9 +3,10 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": ".tsbuildinfo",
-    "rootDir": ".",
-    "outDir": "lib"
+    "rootDir": "src",
+    "outDir": "lib",
+    "jsx": "react"
   },
-  "include": ["src/**/*.ts", "benchmarks/**/*.ts"],
+  "include": ["src"],
   "references": []
 }
