--- a/packages/ts-transform-graphql-js-tag/package.json
+++ b/packages/ts-transform-graphql-js-tag/package.json
@@ -23,6 +23,7 @@
     "access": "public"
   },
   "dependencies": {
+    "graphql": "^15.6.1",
     "typescript": "^4.4.3"
   },
   "peerDependencies": {
