--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -1,17 +1,11 @@
 {
   "name": "@graphitation/supermassive",
   "license": "MIT",
-  "version": "0.2.0",
-  "main": "./src/index.js",
+  "version": "0.2.0-bak.9",
   "bin": {
     "supermassive": "./bin/supermassive.js"
   },
-  "exports": {
-    ".": {
-      "import": "./lib/index.mjs",
-      "require": "./lib/index.js"
-    }
-  },
+  "main": "./src/index.ts",
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
@@ -34,8 +28,15 @@
   },
   "publishConfig": {
     "main": "./lib/index",
-    "types": "./lib/index.d.ts",
-    "access": "public"
+    "types": "./lib/types/index.d.ts",
+    "access": "public",
+    "module": "./lib/mjs/index.js",
+    "exports": {
+      ".": {
+        "import": "./lib/mjs/index.js",
+        "require": "./lib/cjs/index.js"
+      }
+    }
   },
   "dependencies": {
     "@graphql-tools/schema": "^7.1.5",
