--- a/packages/relay-compiler-language-graphitation/tsconfig.json
+++ b/packages/relay-compiler-language-graphitation/tsconfig.json
@@ -8,8 +8,8 @@
     "moduleResolution": "Node",
     "rootDir": "src",
     "outDir": "lib",
-    "declaration": false,
-    "declarationMap": false,
+    "declaration": true,
+    "declarationMap": true,
     "strict": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
