--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "version": "0.8.2",
   "main": "./src/index.ts",
+  "types": "./src/types.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/graphitation.git",
@@ -13,6 +14,7 @@
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
     "test": "monorepo-scripts test",
+    "types": "monorepo-scripts types",
     "just": "monorepo-scripts"
   },
   "dependencies": {
@@ -34,8 +36,8 @@
     "graphql": "^15.0.0"
   },
   "publishConfig": {
-    "main": "./lib/index",
-    "types": "./lib/index.d.ts",
+    "main": "./lib/index.js",
+    "types": "./lib/types.d.ts",
     "access": "public",
     "module": "./lib/index.mjs",
     "exports": {
