--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.13",
-    "@graphitation/apollo-react-relay-duct-tape": "^0.5.0",
+    "@graphitation/apollo-react-relay-duct-tape": "^0.5.0-store-observation.8",
     "@graphitation/graphql-js-tag": "^0.5.3",
     "@graphql-tools/schema": "^8.2.0",
     "graphql": "^15.6.0",
@@ -15,7 +15,7 @@
     "start": "yarn generate-resolver-typings && concurrently 'yarn relay --watch' 'yarn serve'",
     "serve": "webpack serve",
     "build": "webpack",
-    "relay": "graphitation-compiler --schema ./data/schema.graphql --src ./src",
+    "relay": "graphitation-compiler --schema ./data/schema.graphql --src ./src --printWatchQueries",
     "generate-resolver-typings": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
