--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -5,6 +5,9 @@
   "version": "0.7.0",
   "main": "./src/index.ts",
   "types": "./src/types.d.ts",
+  "bin": {
+    "graphitation-compiler": "./lib/cli.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/graphitation.git",
