--- a/packages/graphql-js-tag/package.json
+++ b/packages/graphql-js-tag/package.json
@@ -18,9 +18,16 @@
     "monorepo-scripts": "*"
   },
   "publishConfig": {
-    "main": "./lib/index",
+    "main": "./lib/index.js",
     "types": "./lib/index.d.ts",
-    "access": "public"
+    "access": "public",
+    "module": "./lib/index.mjs",
+    "exports": {
+      ".": {
+        "import": "./lib/index.mjs",
+        "require": "./lib/index.js"
+      }
+    }
   },
   "dependencies": {
     "invariant": "^2.0.0"
