--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "clean": "git clean -fdx -e node_modules",
-    "build": "lage build",
+    "build-only": "lage build",
+    "build": "lage build && lage types",
     "types": "lage types",
     "test": "lage test",
     "lint": "lage lint",
@@ -21,7 +22,7 @@
     "release": "yarn beachball publish"
   },
   "devDependencies": {
-    "beachball": "2.2.0",
+    "beachball": "^2.20.0",
     "lage": "0.29.1",
     "prettier": "^2.2.1"
   }
