--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -2,7 +2,7 @@
   "name": "@graphitation/apollo-react-relay-duct-tape",
   "description": "A compatibility wrapper that provides the react-relay API on top of Apollo Client.",
   "license": "MIT",
-  "version": "0.4.5",
+  "version": "0.6.0",
   "main": "./src/index.ts",
   "scripts": {
     "build": "monorepo-scripts build",
@@ -14,16 +14,16 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.3.15",
-    "@graphitation/apollo-mock-client": "^0.6.11",
-    "@graphitation/graphql-js-operation-payload-generator": "^0.5.10",
-    "@graphitation/graphql-js-tag": "^0.5.5",
+    "@graphitation/apollo-mock-client": "^0.9.0",
+    "@graphitation/graphql-js-operation-payload-generator": "^0.7.0",
+    "@graphitation/graphql-js-tag": "^0.7.0",
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.3",
     "graphql": "^15.0.0",
     "monorepo-scripts": "*",
     "react": "^17.0.2",
     "relay-compiler": "^11.0.2",
-    "relay-compiler-language-graphitation": "^0.5.3",
+    "relay-compiler-language-graphitation": "^0.6.0",
     "ts-expect": "^1.3.0"
   },
   "peerDependencies": {
@@ -34,7 +34,15 @@
     "invariant": "^2.2.4"
   },
   "publishConfig": {
-    "main": "./lib/index",
-    "types": "./lib/index.d.ts"
+    "main": "./lib/index.js",
+    "types": "./lib/index.d.ts",
+    "access": "public",
+    "module": "./lib/index.mjs",
+    "exports": {
+      ".": {
+        "import": "./lib/index.mjs",
+        "require": "./lib/index.js"
+      }
+    }
   }
 }
