[package] Add repo details to other packages and template

--- a/packages/supermassive/package.json
+++ b/packages/supermassive/package.json
@@ -6,6 +6,11 @@
     "supermassive": "./bin/supermassive.js"
   },
   "main": "./src/index.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/graphitation.git",
+    "directory": "packages/supermassive"
+  },
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
