--- a/package-template/package.json
+++ b/package-template/package.json
@@ -3,6 +3,11 @@
   "license": "MIT",
   "version": "0.1.0",
   "main": "./src/index.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/microsoft/graphitation.git",
+    "directory": "packages/template"
+  },
   "scripts": {
     "build": "monorepo-scripts build",
     "lint": "monorepo-scripts lint",
