--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 node_modules
 lib
 .tsbuildinfo
+dist
 
 # This is purely pre-cautionary; when linting becomes slow, delete this eslintcache entry
 .eslintcache
 
 *.tgz
+
+relay-preload-hooks.ts
