--- a/packages/apollo-react-relay-duct-tape/package.json
+++ b/packages/apollo-react-relay-duct-tape/package.json
@@ -32,6 +32,7 @@
     "ts-expect": "^1.3.0"
   },
   "peerDependencies": {
+    "@apollo/client": "^3.3.0",
     "graphql": "^15.0.0",
     "react": "^17.0.2"
   },
