Revert "Revert merge of apollo-fragment-store-watching branch"
This reverts commit 646eef79b1b5a1a603fed7ea95d1fd21a64b6e7c.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules
 lib
 dist
 .tsbuildinfo
+dist
 
 # This is purely pre-cautionary; when linting becomes slow, delete this eslintcache entry
 .eslintcache
@@ -9,3 +10,4 @@ dist
 *.tgz
 
 examples/supermassive-todomvc/**/*.d.ts*
+relay-preload-hooks.ts
