--- a/packages/relay-compiler-language-graphitation/tsconfig.json
+++ b/packages/relay-compiler-language-graphitation/tsconfig.json
@@ -13,5 +13,10 @@
     "esModuleInterop": true
   },
   "include": ["src"],
-  "references": []
+  "references": [],
+  "ts-node": {
+    "transpileOnly": true,
+    "target": "es5",
+    "module": "commonjs"
+  }
 }
