--- a/examples/apollo-watch-fragments/package.json
+++ b/examples/apollo-watch-fragments/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.6",
-    "@graphitation/apollo-react-relay-duct-tape": "^0.7.0",
+    "@graphitation/apollo-react-relay-duct-tape": "^1.0.0-alpha.1",
     "@graphitation/graphql-js-tag": "^0.5.3",
     "@graphql-tools/schema": "^8.2.0",
     "graphql": "^15.6.0",
@@ -48,7 +48,7 @@
     "concurrently": "^6.2.1",
     "graphql-relay": "^0.10.0",
     "relay-compiler": "^10",
-    "relay-compiler-language-graphitation": "^0.7.0",
+    "relay-compiler-language-graphitation": "^1.0.0-alpha.1",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.2.1",
     "typescript": "^4.1.2",
