--- a/packages/relay-compiler-language-graphitation/package.json
+++ b/packages/relay-compiler-language-graphitation/package.json
@@ -2,7 +2,7 @@
   "name": "relay-compiler-language-graphitation",
   "description": "A relay-compiler plugin that wraps the TypeScript plugin and augments it slightly for @graphitation/apollo-react-relay-duct-tape's needs.",
   "license": "MIT",
-  "version": "0.7.0",
+  "version": "1.0.0-alpha.1",
   "main": "./src/index.ts",
   "types": "./src/types.ts",
   "bin": {
@@ -21,11 +21,11 @@
     "just": "monorepo-scripts"
   },
   "dependencies": {
-    "@graphitation/graphql-js-tag": "^0.5.4",
     "relay-compiler-language-typescript": "^14.0.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@graphitation/graphql-js-tag": "^0.5.4",
     "@types/dedent": "^0.7.0",
     "@types/jest": "^26.0.22",
     "@types/relay-compiler": "^8.0.0",
